add ESP Web Flasher link

--- a/index.html
+++ b/index.html
@@ -487,8 +487,12 @@ button.overrides = {
 
       <div class="footer">
         <div>
-          ESP Web Tools –
-          <a href="https://github.com/esphome/esp-web-tools">GitHub</a>
+          ESP Web Tools is
+          <a href="https://github.com/esphome/esp-web-tools">open source</a>
+          and uses
+          <a href="https://github.com/NabuCasa/esp-web-flasher"
+            >ESP Web Flasher</a
+          >.
         </div>
         <div class="initiative">
           ESP Web Tools is a project by
