--- a/index.html
+++ b/index.html
@@ -486,19 +486,17 @@ button.overrides = {
       </div>
 
       <div class="footer">
-        <div>
-          ESP Web Tools is
-          <a href="https://github.com/esphome/esp-web-tools">open source</a>
-          and uses
-          <a href="https://github.com/NabuCasa/esp-web-flasher"
-            >ESP Web Flasher</a
-          >.
-        </div>
         <div class="initiative">
           ESP Web Tools is a project by
           <a href="https://esphome.io">ESPHome</a>.<br />
           Development is funded by
           <a href="https://www.nabucasa.com">Nabu Casa</a>.
+        </div>
+        <div>
+          ESP Web Tools is
+          <a href="https://github.com/esphome/esp-web-tools">open source</a>
+          and uses
+          <a href="https://github.com/NabuCasa/esp-web-flasher">ESP Web Flasher</a> originally developed as <a href="https://github.com/adafruit/Adafruit_WebSerial_ESPTool">Adafruit_WebSerial_ESPTool</a> by <a href="https://github.com/makermelissa">Melissa LeBlanc-Williams</a>.
         </div>
       </div>
     </div>
