--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         // In development we import locally.
         window.location.hostname === "localhost"
           ? "/dist/web/install-button.js"
-          : "https://unpkg.com/esp-web-tools@8.0.2/dist/web/install-button.js?module"
+          : "https://unpkg.com/esp-web-tools@8.0.3/dist/web/install-button.js?module"
       );
     </script>
   </head>
@@ -301,7 +301,7 @@
       <pre>
 &lt;script
   type="module"
-  src="https://unpkg.com/esp-web-tools@8.0.2/dist/web/install-button.js?module"
+  src="https://unpkg.com/esp-web-tools@8.0.3/dist/web/install-button.js?module"
 >&lt;/script></pre
       >
       <p>
@@ -496,7 +496,16 @@ button.overrides = {
           ESP Web Tools is
           <a href="https://github.com/esphome/esp-web-tools">open source</a>
           and uses
-          <a href="https://github.com/NabuCasa/esp-web-flasher">ESP Web Flasher</a> originally developed as <a href="https://github.com/adafruit/Adafruit_WebSerial_ESPTool">Adafruit_WebSerial_ESPTool</a> by <a href="https://github.com/makermelissa">Melissa LeBlanc-Williams</a>.
+          <a href="https://github.com/NabuCasa/esp-web-flasher"
+            >ESP Web Flasher</a
+          >
+          originally developed as
+          <a href="https://github.com/adafruit/Adafruit_WebSerial_ESPTool"
+            >Adafruit_WebSerial_ESPTool</a
+          >
+          by
+          <a href="https://github.com/makermelissa">Melissa LeBlanc-Williams</a
+          >.
         </div>
       </div>
     </div>
