--- a/index.html
+++ b/index.html
@@ -222,6 +222,16 @@
           </div>
           <div class="name">ESPHome</div>
         </a>
+        <a
+          href="https://2smart.com/docs-resources/platform-updates/platform-updates-13-07-2022"
+          target="_blank"
+          class="project"
+        >
+          <div class="logo">
+            <img src="static/logos/2smart.png" alt="2Smart logo" />
+          </div>
+          <div class="name">2Smart</div>
+        </a>
       </div>
 
       <h2>How it works</h2>
