--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
       <h3 id="preparing-firmware">Preparing your firmware</h3>
       <p>
         ESP32 firmware is usually split into 4 different files. When these files
-        are installed using `esptool`, it will patch certain bytes to match the
+        are installed using <code>esptool</code>, it will patch certain bytes to match the
         target device. Because ESP Web Tools is not able to do this, you will need
-        to use `esptool` to create a single binary file of your firmware and point
+        to use <code>esptool</code> to create a single binary file of your firmware and point
         ESP Web Tools at that.
       </p>
       <p>
