Add Squeezelite-ESP32 to used projects

--- a/index.html
+++ b/index.html
@@ -223,6 +223,19 @@
           <div class="name">ESPHome</div>
         </a>
         <a
+          href="https://sle118.github.io/squeezelite-esp32-installer/"
+          target="_blank"
+          class="project"
+        >
+          <div class="logo">
+            <img
+              src="static/logos/squeezelite-esp32.png"
+              alt="Squeezelite-ESP32 logo"
+            />
+          </div>
+          <div class="name">Squeezelite-ESP32</div>
+        </a>
+        <a
           href="https://2smart.com/docs-resources/platform-updates/platform-updates-13-07-2022"
           target="_blank"
           class="project"
