Actually still recommend users 9

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       <pre>
 &lt;script
   type="module"
-  src="https://unpkg.com/esp-web-tools/dist/web/install-button.js?module"
+  src="https://unpkg.com/esp-web-tools@9/dist/web/install-button.js?module"
 >&lt;/script></pre
       >
       <p>
