Adds Clockwise logo

--- a/index.html
+++ b/index.html
@@ -245,6 +245,15 @@
           </div>
           <div class="name">2Smart</div>
         </a>
+        <a
+          href="https://clockwise.page"
+          target="_blank"
+          class="project">
+          <div class="logo">
+            <img src="static/logos/clockwise.png" alt="Clockwise logo" />
+          </div>
+          <div class="name">Clockwise</div>
+        </a>
       </div>
 
       <h2>How it works</h2>
