Use manifest from firmware.esphome.io directly

--- a/index.html
+++ b/index.html
@@ -245,10 +245,7 @@
           </div>
           <div class="name">2Smart</div>
         </a>
-        <a
-          href="https://clockwise.page"
-          target="_blank"
-          class="project">
+        <a href="https://clockwise.page" target="_blank" class="project">
           <div class="logo">
             <img src="static/logos/clockwise.png" alt="Clockwise logo" />
           </div>
@@ -259,8 +256,7 @@
       <h2>How it works</h2>
       <p>
         ESP Web Tools works by combining
-        <a
-          href="https://developer.mozilla.org/docs/Web/API/Web_Serial_API"
+        <a href="https://developer.mozilla.org/docs/Web/API/Web_Serial_API"
           >Web Serial</a
         >, <a href="https://www.improv-wifi.com/">Improv Wi-Fi</a> (optional),
         and a manifest which describes the firmware. ESP Web Tools detects the
@@ -349,7 +345,7 @@
       </p>
       <pre>
 &lt;esp-web-install-button
-  manifest="/static/firmware_build/manifest.json"
+  manifest="https://firmware.esphome.io/esphome-web/manifest.json"
 >&lt;/esp-web-install-button></pre
       >
       <p>
