Fix new manifest location

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <a href="https://esphome.io">ESPHome</a>. To get started, connect an ESP
         device to your computer and hit the button:
       </p>
-      <esp-web-install-button manifest="static/firmware_build/manifest.json">
+      <esp-web-install-button manifest="https://firmware.esphome.io/esphome-web/manifest.json">
         <i slot="unsupported">
           The demo is not available because your browser does not support Web
           Serial. Open this page in Google Chrome or Microsoft Edge instead<span
@@ -528,7 +528,7 @@ button.overrides = {
       </p>
       <pre>
 &lt;esp-web-install-button
-  manifest="/static/firmware_build/manifest.json"
+  manifest="https://firmware.esphome.io/esphome-web/manifest.json"
 >
   &lt;button slot="activate">Custom install button&lt;/button>
   &lt;span slot="unsupported">Ah snap, your browser doesn't work!&lt;/span>
