--- a/index.html
+++ b/index.html
@@ -251,6 +251,12 @@
           </div>
           <div class="name">Clockwise</div>
         </a>
+        <a href="https://sblantipodi.github.io/glow_worm_luciferin" target="_blank" class="project">
+          <div class="logo">
+            <img src="static/logos/luciferin_logo.png" alt="Firefly Luciferin logo" />
+          </div>
+          <div class="name">Luciferin</div>
+        </a>
       </div>
 
       <h2>How it works</h2>
