--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
         <a href="https://esphome.io">ESPHome</a>. To get started, connect an ESP
         device to your computer and hit the button:
       </p>
-      <esp-web-install-button manifest="https://firmware.esphome.io/esphome-web/manifest.json">
+      <esp-web-install-button
+        manifest="https://firmware.esphome.io/esphome-web/manifest.json"
+      >
         <i slot="unsupported">
           The demo is not available because your browser does not support Web
           Serial. Open this page in Google Chrome or Microsoft Edge instead<span
@@ -251,9 +253,16 @@
           </div>
           <div class="name">Clockwise</div>
         </a>
-        <a href="https://sblantipodi.github.io/glow_worm_luciferin" target="_blank" class="project">
+        <a
+          href="https://sblantipodi.github.io/glow_worm_luciferin"
+          target="_blank"
+          class="project"
+        >
           <div class="logo">
-            <img src="static/logos/luciferin_logo.png" alt="Firefly Luciferin logo" />
+            <img
+              src="static/logos/luciferin_logo.png"
+              alt="Firefly Luciferin logo"
+            />
           </div>
           <div class="name">Luciferin</div>
         </a>
