--- a/index.html
+++ b/index.html
@@ -266,6 +266,12 @@
           </div>
           <div class="name">Luciferin</div>
         </a>
+        <a href="https://install.openepaperlink.de" target="_blank" class="project">
+          <div class="logo">
+            <img src="static/logos/openepaperlink.png" alt="OpenEpaperLink logo" />
+          </div>
+          <div class="name">OpenEpaperLink</div>
+        </a>
       </div>
 
       <h2>How it works</h2>
